address sonar issues, refactor v2 topology builder to reduce cognitive complexity